force-app/main/default/objects/R_Q_Contact_Eligible_Countries__mdt/R_Q_Contact_Eligible_Countries__mdt.object-meta.xml
<CustomObject>
    <description>R/Q Contact Eligible field update criteria based Countries</description>
    <label>R/Q Contact Eligible Countries</label>
    <pluralLabel>R/Q Contact Eligible Countries</pluralLabel>
</CustomObject>