force-app/main/default/objects/R_Q_Contact_Eligible_Countries__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>This custom metadata stores list of Countries which we use to determine Accounts are eligible for R/Q Contacts</description>
    <label>Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>