force-app/main/default/objects/R_Q_Contact_Eligible_Countries__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>