force-app/main/default/objects/R_Q_Contact_Eligible_Countries__mdt/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>